--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.9",
+    "@mui/x-date-pickers": "^5.0.19",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
