--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^5.0.19",
     "@types/material-ui": "^0.21.12",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -31,6 +32,7 @@
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
