Manager can now add new vehicles and endpoints are created for that data

--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.19",
     "@types/material-ui": "^0.21.12",
@@ -21,6 +22,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "material-ui": "^0.20.2",
+    "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
