--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.19",
     "@types/material-ui": "^0.21.12",
